# IL2CPPUtils

./: CMakeLists.txt  Common.h  FileLog.hpp  Il2CppMetadataUtils.cpp  Il2CppMetadataUtils.h  Main.cpp  build.bat  il2cpp-metadata.h
Tools/: GenProtobuf.py  README.md  TypeDumper.py  TypeDumper2.py
